--- a/index.html
+++ b/index.html
@@ -1,11 +1,6 @@
 <html>
     <head>
-        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-        <link rel="manifest" href="/manifest.json">
-        <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
-        <meta name="theme-color" content="#ffffff">
+        <link rel="icon" href="Angry_grft.png" type="image/png"/>
         <meta charset= "utf-8">
         <meta name ="viewport" content="width=device-width">
         <meta name="description" content="Do You Know How Many Species Are Endangered Today?">
@@ -26,6 +21,7 @@
                         <li><a href= "about.html">About</a></li> 
                         <li><a href= "meettheanimals.html">Meet The Animals</a></li>
                         <li><a href= "howtohelp.html">How To Help</a></li>
+                        <li><a href= "coursework.html">Coursework</a></li>
                     </ul>
                 </nav>
                 
