--- a/about.html
+++ b/about.html
@@ -20,6 +20,7 @@
                         <li class="current"><a href= "about.html">About</a></li> 
                         <li><a href= "meettheanimals.html">Meet The Animals</a></li>
                         <li><a href= "howtohelp.html">How To Help</a></li>
+                        <li><a href= "coursework.html">Coursework</a></li>
                     </ul>
                 </nav>
                 
