--- a/index.html
+++ b/index.html
@@ -29,14 +29,15 @@
         </header>
         <section id="showcase">
             <div class="container">
-                <h1>Endangered Animal Rescue</h1>
-                <p>On the IUCN Red List, there are 41,415 species and 16,306 of those species are threatened with extinction. This includes plants and animals and everyday this number is threatened to increase.</p>
-                
+                <h1 class="shadow">Endangered Animal Rescue</h1>
+            </div>
+            <div class="container">
+                <p class="shadow">On the IUCN Red List, there are 41,415 species and 16,306 of those species are threatened with extinction. This includes plants and animals and everyday this number is threatened to increase.</p>
             </div>
         </section>
         <section id= "newsletter">
             <div class= "container">
-                <h1>To Receive Updates On The Animals...</h1>
+                <h1 class="shadow1">To Receive Updates On The Animals...</h1>
                 <form>
                     <input type="email" placeholder="Enter Email.">
                     <button type="submit" class= "button_1">Enter</button>
