--- a/coursework.html
+++ b/coursework.html
@@ -37,20 +37,31 @@
                 <article id="main-col">
                     <h1 class="page-title">Coursework</h1>
                     <p>This is my portfolio! These are all the projects I have done so far!</p>
-            <ul>
-                <li>
-                <img src="cat(1).jpg">
-                <a href= "https://scratch.mit.edu/projects/171513097/">Scratch Project: Fish Project</a>
-                </li>
-                <li>
-                <img src="cat(1).jpg">
-                <a href= "https://scratch.mit.edu/projects/171390476/">Scratch Project: Paint with Gobo Remix</a>
-                </li>
-                <li>
-                <img src="replit.jpg">
-                <a href= "https://repl.it/KwdU/28">Repl.it: Python Story</a>
-                </li>
-            </ul>
+        <section id = "boxes2">
+            <div class = "container">
+                <div class = "box2">
+                    <img src = "./img/scratchcat.gif">
+                    <h3><a href="https://scratch.mit.edu/projects/171513097/">Scratch Project: Fish Project</a></h3>
+                </div>
+                <div class = "box2">
+                    <img src = "./img/replit.png">
+                    <h3><a href="https://repl.it/KwdU/28">Repl.it: Python Story</a></h3>
+                </div>
+                <div class = "box2">
+                    <img src = "./img/scratchcat.gif">
+                    <h3><a href="https://scratch.mit.edu/projects/171390476/">Scratch Project: Paint with Gobo Remix</a></h3>
+                </div>
+                <div class = "box2">
+                    <img src = "./img/lucid.jpg">
+                    <h3><a href="https://www.lucidchart.com/documents/edit/299018f0-3c09-4528-b1a2-e717b140087f">Lucid Chart: Communist Adventure</a></h3>
+                </div>
+                <div class = "box2">
+                    <img src = "./img/python.png">
+                    <h3><a href="https://drive.google.com/open?id=0B_5wTMvB0IAwVlRvQmNQRXlEaUk">For and While Loops</a></h3>
+                </div>
+            </div>
+        </section>
+
         <footer>
             <p>Highland Animal Rescue, Copyright &copy; 2017</p>
         </footer>
