--- a/coursework.html
+++ b/coursework.html
@@ -59,6 +59,10 @@
                     <img src = "./img/python.png">
                     <h3><a href="https://drive.google.com/open?id=0B_5wTMvB0IAwVlRvQmNQRXlEaUk">For and While Loops</a></h3>
                 </div>
+                <div class = "box2">
+                    <img src = "./img/python.png">
+                    <h3><a href="https://drive.google.com/open?id=0B_5wTMvB0IAwMkhMbzVRTW5kakU">Turtle Competition</a></h3>
+                </div>
             </div>
         </section>
 
