--- a/coursework.html
+++ b/coursework.html
@@ -38,7 +38,7 @@
                     <h1 class="page-title">Coursework</h1>
                     <p>This is my portfolio! These are all the projects I have done so far!</p>
         <section id = "boxes2">
-            <div class = "container">
+            <div class = "container3">
                 <div class = "box2">
                     <img src = "./img/scratchcat.gif">
                     <h3><a href="https://scratch.mit.edu/projects/171513097/">Scratch Project: Fish Project</a></h3>
