--- a/meettheanimals.html
+++ b/meettheanimals.html
@@ -36,7 +36,7 @@
             </div>
         </section>
         <section id="boxes">
-            <div class= "container">
+            <div class= "container3">
                 <div class= "box">
                     <a href="https://en.wikipedia.org/wiki/African_wild_dog" title="HI THERE!"><img src="./img/africanwilddog.jpg"></a>
                     <h3>Joe</h3>
