--- a/coursework.html
+++ b/coursework.html
@@ -1,3 +1,4 @@
+<!--Coursework Page-->
 <html>
     <head>
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -32,6 +33,7 @@
                 
             </div>
         </header>
+<!--My Projects-->
         <section id="main">
             <div class= "container">
                 <article id="main-col">
@@ -65,7 +67,7 @@
                 </div>
             </div>
         </section>
-
+<!--Footer-->
         <footer>
             <p>Highland Animal Rescue, Copyright &copy; 2017</p>
         </footer>
