--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!--Home/Index Page-->
 <html>
     <head>
         <link rel="icon" href="Angry_grft.png" type="image/png"/>
@@ -27,6 +28,7 @@
                 
             </div>
         </header>
+<!--Showcase-->
         <section id="showcase">
             <div class="container">
                 <h1 class="shadow">Endangered Animal Rescue</h1>
@@ -40,6 +42,7 @@
                 <h1 class="shadow1">To Receive Updates On The Animals...</h1>
                 <form>
                     <input type="email" placeholder="Enter Email.">
+                    <!--Hover Button-->
                     <head>
                     <style>
                         .button {
@@ -90,6 +93,8 @@
                 </form>
             </div>
         </section>
+        
+<!--Continents-->
         <section id="boxes1">
             <div class= "container">
                 <div class= "box1">
@@ -133,6 +138,7 @@
                 </div>
             </div>
         </section> 
+<!--Footer-->
         <footer>
             <p>Highland Animal Rescue, Copyright &copy; 2017</p>
         </footer>
