--- a/howtohelp.html
+++ b/howtohelp.html
@@ -1,3 +1,4 @@
+<!--How to Help Page-->
 <html>
     <head>
         <meta charset= "utf-8">
@@ -26,7 +27,7 @@
                 
             </div>
         </header>
-
+<!--Intro-->
         <section id="main">
             <div class= "container">
                 <article id="main-col">
@@ -211,7 +212,7 @@
 </section>
             </div>
         </section> 
-       
+<!--Footer-->
         <footer>
             <p>Highland Animal Rescue, Copyright &copy; 2017</p>
         </footer>
