--- a/meettheanimals.html
+++ b/meettheanimals.html
@@ -1,3 +1,4 @@
+<!--Meet The Animals-->
 <html>
     <head>
         <meta charset= "utf-8">
@@ -35,6 +36,7 @@
                 </article>
             </div>
         </section>
+<!--Animals-->
         <section id="boxes">
             <div class= "container3">
                 <div class= "box">
@@ -84,7 +86,7 @@
                             </style>
                             </head>
                             <body>
-                            <a href="howtohelp.html"><button class="button"><span> Sponsor/Adopt! </span></button></a>
+                            <a href="howtohelp.html"><button class="button"><span> Adopt! </span></button></a>
                             </body>
                 </div>
                 <div class= "box">
@@ -134,7 +136,7 @@
                             </style>
                             </head>
                             <body>
-                            <a href="howtohelp.html"><button class="button"><span> Sponsor/Adopt! </span></button></a>
+                            <a href="howtohelp.html"><button class="button"><span> Adopt! </span></button></a>
                             </body>
                 </div>
                 <div class= "box">
@@ -184,7 +186,7 @@
                             </style>
                             </head>
                             <body>
-                            <a href="howtohelp.html"><button class="button"><span> Sponsor/Adopt! </span></button></a>
+                            <a href="howtohelp.html"><button class="button"><span> Adopt! </span></button></a>
                             </body>
                 </div>
                 <div class= "box">
@@ -234,7 +236,7 @@
                             </style>
                             </head>
                             <body>
-                            <a href="howtohelp.html"><button class="button"><span> Sponsor/Adopt! </span></button></a>
+                            <a href="howtohelp.html"><button class="button"><span> Adopt! </span></button></a>
                             </body>
                 </div>
                 <div class= "box">
@@ -284,7 +286,7 @@
                             </style>
                             </head>
                             <body>
-                            <a href="howtohelp.html"><button class="button"><span> Sponsor/Adopt! </span></button></a>
+                            <a href="howtohelp.html"><button class="button"><span> Adopt! </span></button></a>
                             </body>
                 </div>
                 <div class= "box">
@@ -333,7 +335,7 @@
                             </style>
                             </head>
                             <body>
-                            <a href="howtohelp.html"><button class="button"><span> Sponsor/Adopt! </span></button></a>
+                            <a href="howtohelp.html"><button class="button"><span> Adopt! </span></button></a>
                             </body>
                 </div>
                 <div class= "box">
@@ -383,7 +385,7 @@
                             </style>
                             </head>
                             <body>
-                            <a href="howtohelp.html"><button class="button"><span> Sponsor/Adopt! </span></button></a>
+                            <a href="howtohelp.html"><button class="button"><span> Adopt! </span></button></a>
                             </body>
                 </div>
                 <div class= "box">
@@ -433,7 +435,7 @@
                             </style>
                             </head>
                             <body>
-                            <a href="howtohelp.html"><button class="button"><span> Sponsor/Adopt! </span></button></a>
+                            <a href="howtohelp.html"><button class="button"><span> Adopt! </span></button></a>
                             </body>
                 </div>
                 <div class= "box">
@@ -483,7 +485,7 @@
                             </style>
                             </head>
                             <body>
-                            <a href="howtohelp.html"><button class="button"><span> Sponsor/Adopt! </span></button></a>
+                            <a href="howtohelp.html"><button class="button"><span> Adopt! </span></button></a>
                             </body>
                 </div>
                 <div class= "box">
@@ -533,7 +535,7 @@
                             </style>
                             </head>
                             <body>
-                            <a href="howtohelp.html"><button class="button"><span> Sponsor/Adopt! </span></button></a>
+                            <a href="howtohelp.html"><button class="button"><span> Adopt! </span></button></a>
                             </body>
                 </div>
                 <div class= "box">
@@ -583,7 +585,7 @@
                             </style>
                             </head>
                             <body>
-                            <a href="howtohelp.html"><button class="button"><span> Sponsor/Adopt! </span></button></a>
+                            <a href="howtohelp.html"><button class="button"><span> Adopt! </span></button></a>
                             </body>
                 </div>
                 <div class= "box">
@@ -633,11 +635,12 @@
                             </style>
                             </head>
                             <body>
-                            <a href="howtohelp.html"><button class="button"><span> Sponsor/Adopt! </span></button></a>
+                            <a href="howtohelp.html"><button class="button"><span> Adopt! </span></button></a>
                             </body>
                 </div>
             </div>
         </section> 
+<!--Footer-->
         <footer>
             <p>Highland Animal Rescue, Copyright &copy; 2017</p>
         </footer>
