--- a/coursework.html
+++ b/coursework.html
@@ -65,6 +65,10 @@
                     <img src = "./img/python.png">
                     <h3><a href="https://drive.google.com/open?id=0B_5wTMvB0IAwMkhMbzVRTW5kakU">Turtle Competition</a></h3>
                 </div>
+                <div class = "box2">
+                    <img src = "./img/pygame.jpg">
+                    <h3><a href="Li_ArauzGame.py"> PYGAME: Snakes and Heads </a></h3>
+                </div>
             </div>
         </section>
 <!--Footer-->
