--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         
 <!--Continents-->
         <section id="boxes1">
-            <marquee>ANIMALS ARE DYING! OU CAN SAVE THEM!</marquee>
+            <marquee>ANIMALS ARE DYING! YOU CAN SAVE THEM TODAY BY DONATING!</marquee>
             <div class= "container">
                 <div class= "box1">
                     <img src="./img/asia.img.png">
