--- a/coursework.html
+++ b/coursework.html
@@ -69,6 +69,10 @@
                     <img src = "./img/pygame.jpg">
                     <h3><a href="Li_ArauzGame.py">PYGAME: Snakes and Heads</a></h3>
                 </div>
+                <div class = "box2">
+                    <img src = "./img/peg.png">
+                    <h3><a href="flappy.html">JAVASCRIPT: Flappy Pegasus</a></h3>
+                </div>
 
 
             </div>
